# ClassicYou

./: .gitignore  CMakeLists.txt  README.md  classic-you.sln  classic-you.vcxproj  imgui.ini  vcpkg.json
assets/shaders/: Empty.glsl  GUIFragment.glsl  GUIVertex.glsl  ScreenFragment.glsl  ScreenVertex.glsl  SkyboxFragment.glsl  SkyboxVertex.glsl
assets/shaders/Grid/: Grid2DVertex.glsl  Grid3DFragment.glsl  Grid3DVertex.glsl  SceneGridFragment.glsl  SceneGridVertex.glsl
assets/shaders/Lighting/: LightCalculations.glsl  ShadowCalculations.glsl
assets/shaders/Normals/: NormalVisualiserFragment.glsl  NormalVisualiserGeometry.glsl  NormalVisualiserVertex.glsl
assets/shaders/Scene/: PickerFragment.glsl  PickerVertex.glsl  Scene2DFragment.glsl  Scene2DVertex.glsl  SceneFragment.glsl  SceneInstanceVertex.glsl  SceneVertex.glsl
assets/shaders/Shadows/: ShadowMapVertex.glsl
levels/legacy/: desktop.ini
scripts/: build.sh  debug.sh  run.sh
src/: GUI.cpp  GUI.h  Settings.h  main.cpp
src/Editor/: Actions.cpp  Actions.h  DrawingPad.cpp  DrawingPad.h  EditConstants.h  EditorEventHandlers.cpp  EditorEventHandlers.h  EditorGUI.cpp  EditorGUI.h  EditorLevel.cpp  EditorLevel.h  EditorSettings.h  EditorState.cpp  EditorState.h  EditorUtils.cpp  EditorUtils.h  FloorManager.cpp  FloorManager.h  Grids.cpp  Grids.h  InfiniteGrid.cpp  InfiniteGrid.h  LegacyFileConverter.cpp  LevelFileIO.cpp  LevelFileIO.h  LevelObject.cpp  LevelObject.h  LevelObjectGeometry.cpp  LevelObjectPropertyEditor.cpp  LevelObjectPropertyEditor.h  LevelObjects.cpp  LevelObjects.h  LevelTextures.cpp  LevelTextures.h  ObjectProperties.cpp  ObjectProperties.h  Tool.cpp  Tool.h  WorldGeometry.cpp  WorldGeometry.h
src/Editor/LevelObjects/: LevelObject.cpp  (+16 more)
src/Graphics/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Lights.h  Mesh.cpp  Mesh.h  MeshGeneration.cpp  MeshGeneration.h  Model.cpp  Model.h  ShadowMap.cpp  ShadowMap.h  Skybox.cpp  Skybox.h
src/Screens/: Screen.cpp  Screen.h  ScreenEditGame.cpp  ScreenEditGame.h  ScreenMainMenu.cpp  ScreenMainMenu.h  ScreenPlaying.cpp  ScreenPlaying.h
src/Util/: ImGuiExtras.cpp  ImGuiExtras.h  Keyboard.h  Maths.cpp  Maths.h  Profiler.h  Util.cpp  Util.h
(+27 files in other folders)
